# pybashify

./: .gitignore  .pipelight_ignore  README.md  deno.jsonc  pipelight.ts  pyproject.toml  ruff.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: c.yml  create_release.yml  publish.yml  pypi_publish.yml
pybashify/: constants.py
pybashify/cli/: main.py
pybashify/compilation/: compiler.py  inlines.py  schemas.py  utils.py
release/: pybashify-0.0.1-py3-none-any.whl
scripts/: update-version.sh
scripts/helpers/: read-version.py
test/: script.py  template.sh
testing/: another_script.py  script.py  template-compiled.sh  template.sh  template2-compiled.sh  template2.sh  template3-compiled.sh  template3.sh  template4.sh
