[project]
name = "pybashify"
version = "0.0.1"
description = "Use Python to write bash scripts while interop w/ bash"
authors = [ { name = "Ameer Arsala", email = "ameer.arsala03@gmail.com" } ]
requires-python = ">= 3.10"
dependencies = [
  "typer>=0.12.5,<0.13",
  "pydantic>=2.0",
  "numpy>=2.1.0,<3",
  "astor>=0.8.1,<0.9"
]

[project.optional-dependencies]
devdeps = [
  "hatch",
  "pytest",
  "ruff>=0.6.5,<0.7"
]

[project.scripts]
bashify = "pybashify.cli.main:app"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["pybashify"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
pybashify = { path = ".", editable = true }

[tool.pixi.tasks]
build = "hatch build ./release"

[tool.pixi.environments]
dev = { features = ["devdeps"] }
prod = { features = [] }

[tool.ruff]
# Specify the version here where it is actually specified above
target-version = "py310"
