[project]
name = "pybashify"
version = "0.0.6"
description = "Use Python to write bash scripts while interop w/ bash"
authors = [ { name = "Ameer Arsala", email = "ameer.arsala03@gmail.com" } ]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.10"
dependencies = [
  "typer>=0.12.5,<0.13",
  "pydantic>=2.0",
  "numpy>=2.1.0,<3",
  "astor>=0.8.1,<0.9"
]

[project.urls]
Repository = "https://github.com/AmeerArsala/pybashify"
Source = "https://github.com/AmeerArsala/pybashify"
Tracker = "https://github.com/AmeerArsala/pybashify/issues"

[project.optional-dependencies]
fdev = [
  "hatch",
  "pytest",
  "ruff>=0.6.5,<0.7"
, "tomli>=2.0.2,<3"]

[project.scripts]
bashify = "pybashify.cli.main:app"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["pybashify"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
pybashify = { path = ".", editable = true }

# [tool.pixi.tasks]

[tool.pixi.feature.fdev.tasks]
build = "hatch build ./dist"

[tool.pixi.environments]
dev = { features = ["fdev"] }
prod = { features = [] }

[tool.ruff]
# Specify the version here where it is actually specified above
target-version = "py310"
